test/expected/declare_vf_v-c.out
declare f as virtual function returning void
             ^
14: error: "virtual": unsupported keyword in C
